@@ -12,7 +12,7 @@ Description:  Variable elimination (Gaussian elimination, Fourier-Motzkin elimin
     simplify systems by removing spurious columns and rows and collapse implied equalities, 
     test if a matrix is totally unimodilar, compute variable ranges implied by linear
     (in)equalities.
-Version: 0.1.1.1
+Version: 0.1.1.2
 URL: https://github.com/data-cleaning/lintools
 BugReports: https://github.com/data-cleaning/lintools/issues
 Date: 2016-03-04
