@@ -1,4 +1,5 @@
 version 0.1.1.2
+ - bugfix in ranges. Crashed on some cases where matrices w/zero rows were created.
 
 version 0.1.1.1
  - new function 'is_totally_unimodular'
